@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-20T16:23:19Z",
-  "count_outdated" : 368,
-  "uniques_outdated" : 232,
-  "count" : 393,
+  "timestamp" : "2022-07-21T01:26:30Z",
+  "count_outdated" : 370,
+  "uniques_outdated" : 233,
+  "count" : 395,
   "uniques" : 249,
   "clones" : [
-    {
-      "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-07T00:00:00Z",
       "count": 1,
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
